[gd_scene load_steps=4 format=2]

[ext_resource path="res://Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://Menu/HotKeys.tscn" type="PackedScene" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0352941, 0.12549, 0.278431, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.172549, 0.32549, 0.580392, 1 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -150.0
margin_right = 175.0
margin_bottom = 150.0
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -89.0
margin_top = -69.5
margin_right = 89.0
margin_bottom = 69.5
custom_constants/separation = 8

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
margin_right = 178.0
margin_bottom = 41.0
text = "Continue Meeting"

[node name="HotKeysButton" type="Button" parent="VBoxContainer"]
margin_top = 49.0
margin_right = 178.0
margin_bottom = 90.0
text = "Hot Keys"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
margin_top = 98.0
margin_right = 178.0
margin_bottom = 139.0
text = "Exit Meeting"

[node name="HotKeys" parent="." instance=ExtResource( 2 )]
visible = false

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
